developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Business_Name__c/OJSERLIB__VEDA_Business_Name__c.object-meta.xml
<CustomObject>
    <label>VEDA Business Name</label>
    <nameField>
        <displayFormat>VB-{0000}</displayFormat>
        <label>VEDA Business</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VEDA Business Names</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>