developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Business_Name__c/fields/OJSERLIB__Bureau_Reference__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Bureau_Reference__c</fullName>
    <label>Bureau Reference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>