developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Business_Name__c/fields/OJSERLIB__Business_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Business_Name__c</fullName>
    <label>Business Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>