developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Business_Name__c/fields/OJSERLIB__Last_Extract_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Last_Extract_Date__c</fullName>
    <label>Last Extract Date</label>
    <type>Date</type>
</CustomField>