developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Business_Name__c/fields/OJSERLIB__Register_Number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Register_Number__c</fullName>
    <label>Register Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>