developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Business_Name__c/fields/OJSERLIB__Register_State__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Register_State__c</fullName>
    <label>Register State</label>
    <length>3</length>
    <type>Text</type>
</CustomField>