developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Business_Name__c/fields/OJSERLIB__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>